
Release 5.0.10 (unreleased)
===========================

Bug fixes
---------

- Lagrangian module with deposition: fix use of wrong Eulerian
  fluid velocity in some terms.

- Fix in ALE wall BCs.

- GUI reader: fix for cases with multiple mapped inlets.

- Work around possible Intel icc compiler bug in least-squares vector
  gradient (observed on v6.0 with icc 18.0.1 20171018).

- Avoid opening residuals.csv from all ranks.

- Fix for time moment which start is defined by a time value equal or close to
  a time step value.

- Fix memory leaks in parameters check.

- Fix in GUI for gas combustion model. Use variable name instead of label to get
  numerical scheme.

- Fix in GUI of turbulence model view initalization by moving out of
  turbulence model slot the view initalization code.

- Fix in TVD convective schemes (parallel mode).

- Fix crash when using multiple GUI-defined scalar balance zones.

- Fix memory leak leading to crash in legacy porosity model.

- CFDSTUDY (Salome): fix issues with dissapearing windows onserved on
  some actual systems such as Debian 9 and Ubuntu 16.04.

- Lagrangian Module:
  * Fix crash in restart when not reading previous statistics.
  * Fix crash in some cases with no deposition model.
  * Fix errors in deposition/reentrainment model.

- Fix missing free surface boundary movement in some cases depending on
  which pages were visited in the GUI (GitHub issue #27).

- Compressible: fix density time scheme in transported passive scalar/vector
  balance to ensure conservativity with compressible algorithm.

- Avoid error preventing run when checking remaining time using SLURM job array.

- Fixes for parallel runs in sedimentation source term with humid atmosphere
  model.

- Fix allocation of pmappers to scalar fields in atmospheric aerosols model.

- Fix allocation size for values at injection in case of mass source terms
  with coupled Reynolds stress solver.
